// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HDButton /> render component 1`] = `
<Button
  active={false}
  block={false}
  className="hastings-btn hastings-btnprimary "
  disabled={false}
  onClick={[Function]}
  size={null}
  type="button"
  variant="btnprimary"
>
  button
</Button>
`;

exports[`<HDButton /> render component with props 1`] = `
<Button
  active={false}
  block={false}
  className="hastings-btn hastings-btnsecondary "
  disabled={false}
  onClick={[Function]}
  size={null}
  type="button"
  variant="btnsecondary"
>
  LABEL
</Button>
`;
